fix overflow over parent div

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 {
     background-color: #555;
     border-radius: 1rem;
     margin: 2rem auto;
-    max-height: 33.5rem;
+    max-height: 32rem;
     padding: 0.5rem;
 }
 
